<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/user_info_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/azure"
            android:fadingEdge="none"
            android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15.0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dp">

            <ImageView
                android:id="@+id/user_info_userface"
                android:layout_width="72dip"
                android:layout_height="72dip"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/yq" />

            <ImageView
                android:id="@+id/user_info_gender"
                android:layout_width="25dip"
                android:layout_height="25dip"
                android:layout_alignBottom="@id/user_info_userface"
                android:layout_marginLeft="10.0dip"
                android:layout_toRightOf="@id/user_info_userface"
                android:scaleType="fitCenter"
                android:src="@drawable/widget_gender_man" />

            <TextView
                android:id="@+id/user_info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/user_info_gender"
                android:layout_alignLeft="@id/user_info_gender"
                android:layout_marginBottom="10.0dip"
                android:text="@string/userinfo_title"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </RelativeLayout>

        <!-- 收藏 -->

        <LinearLayout
            android:id="@+id/user_info_favorites_ll"
            style="@style/UserInfoLayoutStyle"
            android:layout_marginTop="10dip">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_favorites" />

            <TextView
                android:id="@+id/user_info_favorites"
                style="@style/UserInfoRightText2Style" />

        </LinearLayout>

        <!-- 关注 -->

        <LinearLayout
            android:id="@+id/user_info_followers_ll"
            style="@style/UserInfoLayoutStyle">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_followers" />

            <TextView
                android:id="@+id/user_info_followers"
                style="@style/UserInfoRightText2Style" />

        </LinearLayout>

        <!-- 历史 -->

        <LinearLayout
            android:id="@+id/user_info_pass_ll"
            style="@style/UserInfoLayoutStyle">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_pass" />

            <TextView
                android:id="@+id/user_info_fans"
                style="@style/UserInfoRightText2Style" />

        </LinearLayout>

        <!-- 加入时间 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle"
            android:layout_marginTop="10dip">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_join_time" />

            <TextView
                android:id="@+id/user_info_jointime"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 所在地区 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_area" />

            <TextView
                android:id="@+id/user_info_from"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 开发平台 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_dev_platform" />

            <TextView
                android:id="@+id/user_info_devplatform"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 专长领域 -->

        <LinearLayout
            style="@style/UserInfoLayoutStyle">

            <TextView
                style="@style/UserInfoLeftTextStyle"
                android:text="@string/userinfo_expertise" />

            <TextView
                android:id="@+id/user_info_expertise"
                style="@style/UserInfoRightTextStyle" />
        </LinearLayout>

        <!-- 注销登录 -->
        <Button
            android:id="@+id/user_info_logout"
            style="@style/RedButtonStyle"
            android:layout_marginTop="20dip"
            android:minHeight="45dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_logout" />
    </LinearLayout>

</ScrollView>